[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/default-theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/hud/Hud.gd" type="Script" id=2]
[ext_resource path="res://ui/hud/control-icons.png" type="Texture" id=3]

[node name="Hud" type="VBoxContainer"]
margin_left = 408.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsLabel" type="Label" parent="."]
margin_right = 104.0
margin_bottom = 28.0
text = "Controls"
align = 1

[node name="ControlPreview" type="Control" parent="."]
margin_top = 32.0
margin_right = 104.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 50 )

[node name="ControlPreviewContainer" type="Node2D" parent="ControlPreview"]
position = Vector2( 48, 40 )

[node name="MoveLeft" type="Node2D" parent="ControlPreview/ControlPreviewContainer"]
position = Vector2( -24, 0 )

[node name="Action" type="Sprite" parent="ControlPreview/ControlPreviewContainer/MoveLeft"]
texture = ExtResource( 3 )
vframes = 2
hframes = 8

[node name="Input" type="Sprite" parent="ControlPreview/ControlPreviewContainer/MoveLeft"]
position = Vector2( -16, 0 )
texture = ExtResource( 3 )
vframes = 2
hframes = 8
frame = 8

[node name="MoveRight" type="Node2D" parent="ControlPreview/ControlPreviewContainer"]
position = Vector2( 24, 0 )

[node name="Action" type="Sprite" parent="ControlPreview/ControlPreviewContainer/MoveRight"]
texture = ExtResource( 3 )
vframes = 2
hframes = 8
frame = 1

[node name="Input" type="Sprite" parent="ControlPreview/ControlPreviewContainer/MoveRight"]
position = Vector2( 16, 0 )
texture = ExtResource( 3 )
vframes = 2
hframes = 8
frame = 9

[node name="Jump" type="Node2D" parent="ControlPreview/ControlPreviewContainer"]
position = Vector2( 0, -24 )

[node name="Action" type="Sprite" parent="ControlPreview/ControlPreviewContainer/Jump"]
texture = ExtResource( 3 )
vframes = 2
hframes = 8
frame = 2

[node name="Input" type="Sprite" parent="ControlPreview/ControlPreviewContainer/Jump"]
position = Vector2( 0, -16 )
texture = ExtResource( 3 )
vframes = 2
hframes = 8
frame = 10

[node name="ControlScrambleTimer" type="Label" parent="."]
margin_top = 86.0
margin_right = 104.0
margin_bottom = 114.0
text = "00:00"
align = 1
